fixed overflow for todo list

--- a/to-dolist/styles.css
+++ b/to-dolist/styles.css
@@ -19,7 +19,6 @@
     font-size: 1.5rem;
     background-color: var(--clr-primary);
     color: var(--clr-light);
-  
     display: grid;
     grid:
       "header header header header" auto
@@ -175,6 +174,7 @@
   .task {
     position: relative;
     margin-bottom: 1.25em;
+    overflow-wrap:anywhere;
   }
   
   .task::after {
